assignment-service/k8s/k8s-assignment-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: assignment-service
  name: assignment-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: assignment-service
  template:
    metadata:
      labels:
        app: assignment-service
    spec:
      containers:
        - image: us.gcr.io/classroomict/assignment-service
          imagePullPolicy: IfNotPresent
          name: assignment-service
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/info
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /actuator/health
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
