assignment-service/k8s/k8s-assignment-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: assignment-service
    type: microservice
    tier: backend
  name: assignment-service
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: assignment-service
  type: NodePort
